--- a/Views/Cursoes/Aula.cshtml
+++ b/Views/Cursoes/Aula.cshtml
@@ -448,7 +448,11 @@
         </nav>
         <div id="pai">
             <div id="div1" class="hidden">
-                <iframe src="~/ComoSerEFETIVOnoDiaAdia.pdf" style="width:100%; height:590px;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <!--
+                 <iframe src="~/ComoSerEFETIVOnoDiaAdia.pdf" style="width:100%; height:590px;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                -->
+                <iframe src="~/Dia2.pdf" style="width: 100%;height: 400px;border: none;"></iframe>
+
             </div>
             <div id="div2" class="hidden">
                 <iframe style="width:100%; height:590px;" src="https://www.youtube.com/embed/5qap5aO4i9A"
