--- a/Views/Cursoes/Aula.cshtml
+++ b/Views/Cursoes/Aula.cshtml
@@ -1,8 +1,6 @@
 ﻿@model _30Code.Models.Curso
 
-@{
-    ViewBag.Title = "Aula";
-}
+@{ ViewBag.Title = "Aula"; }
 <style>
     body {
         /*        background: #f5f9fc;
@@ -496,7 +494,7 @@
                 <i for="respotaE">
                     public class Idade{public static void main(String[] args){double idade = 20;System.out.println(idade);}}
                 </i>
-                <hr/>
+                <hr />
 
                 <h4>2) Um Senhor Chamado Jõao quer um programa para ele. Um programador quer declarar uma variavel chamada nome armazenando o nome do Jõao .Qual das alternativas ira retornar seu nome de forma correta!</h4>
                 <form>
@@ -531,6 +529,7 @@
 
             <div id="div4" class="hidden"><h1>Prova</h1></div>
         </div>
+
     </div>
 </div>
 
@@ -544,13 +543,22 @@
         });
     });
 
-    function mostrar(id) {
-        if (document.getElementById(id).style.display == 'none') {
+    //  function mostrar(id) {
+    //        if (document.getElementById(id).style.display == 'none') {
 
-            document.getElementById(id).style.display = 'block';
-        } else {
-            document.getElementById(id).style.display = 'none';
-        }
+    //    document.getElementById(id).style.display = 'block';
+
+    // } else {
+    //      document.getElementById(id).style.display = 'none';
+    //   }
+    // }
+    function mostrar(id) {
+        $('#pai > div').each(function () {
+            // $(this).data('childs', $(this).children('.filha').size())
+            $(this).hide();
+
+        });
+        $("#" + id).show();
     }
 
     //var visibilidade = true; //Variável que vai manipular o botão Exibir/ocultar
@@ -587,16 +595,4 @@
             }
         });
     });
-
-    function f() {
-
-        var obj = document.getElementById('minha_div').style.display;
-
-        if (obj == "none") {
-            document.getElementById('minha_div').style.display = 'block';
-        }
-        if (obj == "block") {
-            document.getElementById('minha_div').style.display = 'none';
-        }
-    }
 </script>
