--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -56,7 +56,9 @@
     <header id="header">
         <div class="container">
             <div class="logo float-left">
-                <h1 class="text-light"><a href="~/Home/Index"><span>30Code</span></a></h1>
+                <a href="~/Home/Index">
+                    <img style="width:100%;" class="img-fluid" src="~/Images/30Code.jpeg" />
+                </a>
                 <!-- Uncomment below if you prefer to use an image logo -->
                 <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
             </div>
@@ -64,11 +66,11 @@
             <nav class="nav-menu float-right d-none d-lg-block">
                 <ul>
                     <li class="active"><a href="~/Home/Index#hero">Home</a></li>
-                    <li><a href="~/Home/Index#about">About Us</a></li>
-                    <li><a href="~/Home/Index#services">Services</a></li>
-                    <li><a href="~/Home/Index#portfolio">Portfolio</a></li>
-                    <li><a href="~/Home/Index#team">Team</a></li>
-                    <li><a href="~/Home/Index#contact">Contact Us</a></li>
+                    <li><a href="~/Home/Index#about">Sobre nós</a></li>
+                    <li><a href="~/Home/Index#services">Recursos</a></li>
+                    <li><a href="~/Home/Index#portfolio">Cursos</a></li>
+                    <li><a href="~/Home/Index#team">Time</a></li>
+                    <li><a href="~/Home/Index#contact">Contato</a></li>
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li>@Html.ActionLink(User.Identity.Name + " - Sair", "Sair", "Usuarios")</li>
@@ -154,9 +156,7 @@
                             <form action="" method="post">
                                 <input type="email" name="email"><input type="submit" value="Subscribe">
                             </form>
-
                         </div>
-
                     </div>
                 </div>
             </div>
