--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -96,8 +96,8 @@
                     </div>
                     <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                         <div class="icon"><i class="icofont-video"></i></div>
-                        <h4 class="title"><a href="">Magni Dolores</a></h4>
-                        <p class="description">Nós fornecemos conteudo em video para melhor entendimento do aluno.</p>
+                        <h4 class="title"><a href="">Video Aulas atualizadas</a></h4>
+                        <p class="description">Nós fornecemos conteudo em video gravado por professores capacitados para melhor entendimento do aluno.</p>
                     </div>
                     <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                         <div class="icon"><i class="icofont-book-alt"></i></div>
