--- a/Views/Cursoes/Aula.cshtml
+++ b/Views/Cursoes/Aula.cshtml
@@ -455,14 +455,10 @@
         </nav>
         <div id="pai">
             <div id="div1" class="hidden">
-                <!--
-                 <iframe src="~/ComoSerEFETIVOnoDiaAdia.pdf" style="width:100%; height:590px;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                -->
-                <iframe src="~/Dia2.pdf" style="width: 100%;height: 400px;border: none;"></iframe>
-
+                <iframe src="~/Dia2.pdf" style="width: 100%;height: 590px;border: none;"></iframe>
             </div>
             <div id="div2" class="hidden">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/aqiB58NpKLw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe style="width:100%; height:590px;" src="https://www.youtube.com/embed/aqiB58NpKLw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div id="div3" class="hidden">
                 <h1>Exercicio</h1>
@@ -543,56 +539,25 @@
         });
     });
 
-    //  function mostrar(id) {
-    //        if (document.getElementById(id).style.display == 'none') {
-
-    //    document.getElementById(id).style.display = 'block';
-
-    // } else {
-    //      document.getElementById(id).style.display = 'none';
-    //   }
-    // }
     function mostrar(id) {
         $('#pai > div').each(function () {
-            // $(this).data('childs', $(this).children('.filha').size())
             $(this).hide();
 
         });
         $("#" + id).show();
     }
 
-    //var visibilidade = true; //Variável que vai manipular o botão Exibir/ocultar
+    //$('.div-sel').hide();
 
-    //function exibir() {
-    //    document.getElementById("dvConteudo").style.display = "block";
-    //}
+    //$('#homeSubmenu').on('change', function () {
+    //    var selecionado = $(this).val();
 
-    //function ocultar() {
-    //    document.getElementById("dvConteudo").style.display = "none";
-    //}
-
-    //function ocultarExibir() { // Quando clicar no botão.
-
-    //    if (visibilidade) {//Se a variável visibilidade for igual a true, então...
-    //        document.getElementById("dvConteudo").style.display = "none";//Ocultamos a div
-    //        visibilidade = false;//alteramos o valor da variável para falso.
-    //    } else {//ou se a variável estiver com o valor false..
-    //        document.getElementById("dvConteudo").style.display = "block";//Exibimos a div..
-    //        visibilidade = true;//Alteramos o valor da variável para true.
-    //    }
-    //}
-
-    $('.div-sel').hide();
-
-    $('#homeSubmenu').on('change', function () {
-        var selecionado = $(this).val();
-
-        $('.div-sel').each(function () {
-            if ($(this).attr('id') == selecionado) {
-                $(this).toggle();
-            } else {
-                $(this).hide();
-            }
-        });
-    });
+    //    $('.div-sel').each(function () {
+    //        if ($(this).attr('id') == selecionado) {
+    //            $(this).toggle();
+    //        } else {
+    //            $(this).hide();
+    //        }
+    //    });
+    //});
 </script>
