--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
                             <div class="carousel-content container">
                                 <h2 class="animate__animated animate__fadeInDown">Bem vindo ao <span>30Code</span></h2>
                                 <p class="animate__animated animate__fadeInUp">O 30Code tem como objetivo trazer à comunidade um novo meio para se estudar e consultar materiais da área de programação de forma dinâmica e divertida, onde os usuários interessados poderão aprender o conteúdo desejado sem o peso de longos textos e estudos teóricos, estabelecendo uma rotina de breves leituras e exercícios.</p>
-                                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+                                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Saiba mais</a>
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                             <div class="carousel-content container">
                                 <h2 class="animate__animated animate__fadeInDown">Beneficios e condições exclusivas através do plano premium</h2>
                                 <p class="animate__animated animate__fadeInUp">Confire a lista de vantagens, venha fazer parte da transformação digital da sua carreira!!</p>
-                                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+                                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Adquira já!</a>
                             </div>
                         </div>
                     </div>
@@ -129,8 +129,8 @@
                     <div class="col-lg-12">
                         <ul id="portfolio-flters">
                             <li data-filter="*" class="filter-active">All</li>
-                            <li data-filter=".filter-app">Back</li>
                             <li data-filter=".filter-card">Front</li>
+                            <li data-filter=".filter-app">Back</li>
                             <li data-filter=".filter-web">Banco</li>
                         </ul>
                     </div>
@@ -152,7 +152,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <div class="portfolio-wrap">
                             <img src="~/assets/img/Cursos/cpp.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -166,7 +166,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-app filter-card">
                         <div class="portfolio-wrap">
                             <img src="~/assets/img/Cursos/javascript.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -180,7 +180,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <div class="portfolio-wrap">
                             <img src="~/assets/img/Cursos/Kotilin.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -208,7 +208,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                         <div class="portfolio-wrap">
                             <img src="~/assets/img/Cursos/nodejs.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -222,7 +222,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
                             <img src="~/assets/img/Cursos/oracle.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -250,7 +250,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <div class="portfolio-wrap">
                             <img src="~/assets/img/Cursos/python.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -397,7 +397,6 @@
 
                 <div class="section-title">
                     <h2>Nosso time</h2>
-                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem.</p>
                 </div>
 
                 <div class="row">
